Fix month picker hidden behind footer

--- a/src/styles/scss/common.scss
+++ b/src/styles/scss/common.scss
@@ -22,6 +22,7 @@
   font-weight: 300;
   font-family: 'Raleway';
   padding: 1% 0 0 2%;
+  z-index: 1;
 
   .company-info {
     clear: both;
