--- a/src/styles/scss/month-picker.scss
+++ b/src/styles/scss/month-picker.scss
@@ -39,6 +39,7 @@
   .jaBMtA {
     width: 100%;
     font-size: 24px;
+    z-index: 10;
   }
 
   .cqplOA {
